# temp-monitor

./: .gitignore  CMakeLists.txt  FLASHING.md  README.md  TODO.md  partitions.csv  sdkconfig
.github/workflows/: build.yml  create-release-tag.yml
docs/: openapi.yaml
main/: CMakeLists.txt  Kconfig.projbuild  ethernet_manager.c  ethernet_manager.h  idf_component.yml  log_buffer.c  main.c  mqtt_client_ha.c  mqtt_client_ha.h  mqtt_utils.h  nvs_storage.c  nvs_storage.h  nvs_utils.c  onewire_temp.c  onewire_temp.h  ota_updater.c  ota_updater.h  sensor_manager.c  sensor_manager.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
main/certs/: github_root_ca.pem
main/html/: config.html  index.html
test/: CMakeLists.txt  config_utils.c  config_utils.h  mqtt_utils.c  nvs_utils.h  test_config_utils.c  test_mqtt_utils.c  test_nvs_utils.c  test_runner.c
